--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,6 @@
 <div id="main">
-  <%= link_to image_tag('main-img.jpg', class: 'main-img'), root_path %>
+  <%= link_to image_tag('main@2x.png', class: 'main-img'), root_path %>
 </div>
-
 
 <div id="article_wrap">
 
