--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -9,9 +9,10 @@
 }
 
 body{
-    font-size: 14px;
+    font-size: 16px;
     color: #161616;
-    font-family: "KozGoPro-Light", "小塚ゴシック Pro L", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
+    font-family: 'Hannotate SC','Comic Sans MS',cursive;
+    /*font-family: "KozGoPro-Light", "小塚ゴシック Pro L", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;*/
 }
 
 .clear {
@@ -22,6 +23,10 @@ a{
     text-decoration: none;
 }
 
+div.container {
+    width: 1000px;
+    margin: 0 auto;
+}
 
 /* ヘッダー
 ------------------------------------------------------------*/
@@ -69,8 +74,12 @@ nav ul li a{
 ------------------------------------------------------------*/
 
 div#main{
-    width: 1280px;
+    width: 1000px;
     margin: 0 auto;
+}
+
+div#main * {
+    float: right;
 }
 
 /* トップ　ー　記事一覧
