--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,10 @@
-<p id="logo"><a href="/">RailsCamp<span>Blog</span></a></p>
+<p id="logo">
+  <%= link_to image_tag('poputelogo.png', class: 'logo^img'), root_path %>
+</p>
 <nav>
   <% if user_signed_in? %>
     <ul>
+      <li><%= link_to "#{current_user.username}(#{current_user.uid})", edit_user_registration_path %></li>
       <li><%= link_to 'トップ', root_path %></li>
       <li><%= link_to '新規投稿', new_post_path %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
